...
                }
                Text("Manage Your Monthly Income Wisely").font(.system(size: 35).bold()).padding(.leading).foregroundColor(.white)
                Text("A new way that makes it easier for you to allocate monthly income").foregroundColor(.white).font(.system(size:20)).padding(.horizontal).padding(.top)
                Spacer().frame(height: 40)
                Button("Sign In"){
                    router.navigate(to: .loginWithEmail)
                }.accessibilityIdentifier("login_welcome_button").buttonStyle(SecondaryButton()).padding(.horizontal)
                HStack{
                    Spacer()
                    Text("Dont have account?").font(.system(.subheadline)).foregroundStyle(Color.white)
                    Text("Sign up now").font(.system(.subheadline).bold()).foregroundStyle(Color.yellow).onTapGesture {
                        router.navigate(to: .registration)
                    }
...
